# FineTuning-using-Transformers

./: Fine_Tuning_Lora.ipynb  README.md  main.py  pyproject.toml
RobertA-FineTuning/: FineTuning_Summarization.py  Summarization_Comparison.out  Summarization_Comparison.py  Summarization_setup.py
bert-FineTuning/: LoraFineTuning.py  LoraFineTuning_1_HalvedRank_IncreasedLR.py  LoraFineTuning_2_DoubledRank_HalvedLR.py  LoraFineTuning_3_HalvedLora_alpha_IncreaseEpochs.py  StandardFineTuning.py  pyproject.toml
t5_finetune/: detailed_results_adapter.csv  detailed_results_lora.csv  detailed_results_sft.csv  detailed_results_t5_base.csv  evaluate.py  evaluate2.py  main.py  model.py  model_comparison_examples.csv  model_evaluation_results.csv  preprocess.py  pyproject.toml  query.py
