[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.4",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "nltk>=3.9.1",
    "peft>=0.15.1",
    "rouge>=1.0.1",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "torch>=2.6.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.21.0",
    "transformers>=4.50.3",
]
