[project]
name = "finetuning-dl2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "code-bert-score>=0.4.1",
    "codebleu>=0.7.0",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.1",
    "peft>=0.15.1",
    "protobuf>=6.30.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.51.2",
    "tree-sitter>=0.22.3",
    "tree-sitter-python>=0.23.6",
]
